Add form Fields

--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -29,7 +29,19 @@
         <label for="office_number">Office Number</label>
         <input id="office_number" type="text" name="office_number" value="">
     </div>
-    
+    <div>
+        <label for="dob">Date of Birth</label>
+        <input id="dob" type="date" name="dob" value="">
+    </div>
+    <div>
+        <label for="category">Employee Category</label>
+        <select id="category" name="category">
+            <option value="full time">Full Time</option>
+            <option value="part time">Part Time</option>
+            <option value="intern">Intern</option>
+            <option value="contractor">Contractor</option>
+        </select>
+    </div>
     <div>
         <input type="Submit" value="Save">
     </div>
