--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -43,6 +43,9 @@
         </select>
     </div>
     <div>
+        <input type="hidden" id="id" name="id" value="">
+    </div>
+    <div>
         <input type="Submit" value="Save">
     </div>
 </form>
