Added user roles and logout button

--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+<div class="logout-container">
+    <a href="#" id="logout_link">Logout</a>
+</div>
 <div class="instructions">
     Enter your employee information below
 </div>
@@ -23,7 +26,7 @@
     </div>      
     <div>
         <label for="phone">Phone Number</label>
-        <input id="phone_number" type="text" name="phone" value="">
+        <input id="phone" type="text" name="phone" value="">
     </div>
     <div>
         <label for="office_number">Office Number</label>
