Admins can edit employees

--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -52,6 +52,13 @@
         <input type="Submit" value="Save">
     </div>
 </form>
+<hr />
+<div id="admin_controls" class="admin-controls" style="display: none;">
+    <label for="employee_select">Select Employee to edit:</label>
+    <select id="employee_select">
+        <option value="">-- Select an employee --</option>
+    </select>
+</div>
 </body>
 
 </html>
