add username and role to header

--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -10,6 +10,7 @@
 
 <body>
 <div class="logout-container">
+    <span id="user_role_label"></span>
     <a href="#" id="logout_link">Logout</a>
 </div>
 <div class="instructions">
