Add user role to dropdown menu

--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -16,6 +16,7 @@
 <div class="instructions">
     Enter your employee information below
 </div>
+<div id="form_status" class="form-status" style="display: none;"></div>
 <form id="employee_record" action="" method="POST">
     <div>
         <label for="first_name">First Name</label>
