improve admin UI
Update instructions based on which profile is being edited

--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -13,8 +13,8 @@
     <span id="user_role_label"></span>
     <a href="#" id="logout_link">Logout</a>
 </div>
-<div class="instructions">
-    Enter your employee information below
+<div class="instructions" id="form_instructions">
+Enter your employee information below
 </div>
 <div id="form_status" class="form-status" style="display: none;"></div>
 <form id="employee_record" action="" method="POST">
