--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -9,58 +9,60 @@
 </head>
 
 <body>
-<div class="logout-container">
-    <span id="user_role_label"></span>
-    <a href="#" id="logout_link">Logout</a>
-</div>
-<div class="instructions" id="form_instructions">
-Enter your employee information below
-</div>
-<div id="form_status" class="form-status" style="display: none;"></div>
-<form id="employee_record" action="" method="POST">
-    <div>
-        <label for="first_name">First Name</label>
-        <input id="first_name" type="text" name="first_name" value="">
+    <div class="logout-container">
+        <span id="user_role_label"></span>
+        <a href="#" id="logout_link">Logout</a>
     </div>
-    <div>
-        <label for="last_name">Last name</label>
-        <input id="last_name" type="text" name="last_name" value="">      
-    </div>      
-    <div>
-        <label for="phone">Phone Number</label>
-        <input id="phone" type="text" name="phone" value="">
+    <div class="instructions" id="form_instructions">
+    Enter your employee information below
     </div>
-    <div>
-        <label for="office_number">Office Number</label>
-        <input id="office_number" type="text" name="office_number" value="">
-    </div>
-    <div>
-        <label for="dob">Date of Birth</label>
-        <input id="dob" type="date" name="dob" value="">
-    </div>
-    <div>
-        <label for="category">Employee Category</label>
-        <select id="category" name="category">
-            <option value="full time">Full Time</option>
-            <option value="part time">Part Time</option>
-            <option value="intern">Intern</option>
-            <option value="contractor">Contractor</option>
+    <div id="form_status" class="form-status" style="display: none;"></div>
+    <form id="employee_record" action="" method="POST">
+        <div>
+            <label for="first_name">First Name</label>
+            <input id="first_name" type="text" name="first_name" value="">
+        </div>
+        <div>
+            <label for="last_name">Last name</label>
+            <input id="last_name" type="text" name="last_name" value="">      
+        </div>      
+        <div>
+            <label for="phone">Phone Number</label>
+            <input id="phone" type="text" name="phone" value="">
+        </div>
+        <div>
+            <label for="office_number">Office Number</label>
+            <input id="office_number" type="text" name="office_number" value="">
+        </div>
+        <div>
+            <label for="dob">Date of Birth</label>
+            <input id="dob" type="date" name="dob" value="">
+        </div>
+        <div>
+            <label for="category">Employee Category</label>
+            <select id="category" name="category">
+                <option value="full time">Full Time</option>
+                <option value="part time">Part Time</option>
+                <option value="intern">Intern</option>
+                <option value="contractor">Contractor</option>
+            </select>
+        </div>
+        <div>
+            <input type="hidden" id="id" name="id" value="">
+        </div>
+        <div>
+            <input type="Submit" value="Save">
+        </div>
+    </form>
+    <hr />
+    <div id="admin_controls" class="admin-controls" style="display: none;">
+        <label for="employee_select">Select Employee to edit:</label>
+        <select id="employee_select">
+            <option value="">-- Select an employee --</option>
         </select>
     </div>
-    <div>
-        <input type="hidden" id="id" name="id" value="">
+    <div id="add_employee_controls" class="admin-controls" style="display: none;">
+        <button type="button" id="add_new_btn">+ Add New Employee</button>
     </div>
-    <div>
-        <input type="Submit" value="Save">
-    </div>
-</form>
-<hr />
-<div id="admin_controls" class="admin-controls" style="display: none;">
-    <label for="employee_select">Select Employee to edit:</label>
-    <select id="employee_select">
-        <option value="">-- Select an employee --</option>
-    </select>
-</div>
 </body>
-
 </html>
