--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -60,9 +60,9 @@
         <select id="employee_select">
             <option value="">-- Select an employee --</option>
         </select>
-    </div>
-    <div id="add_employee_controls" class="admin-controls" style="display: none;">
-        <button type="button" id="add_new_btn">+ Add New Employee</button>
+        <div>
+            <button type="button" id="add_new_btn">+ Add New Employee</button>
+        </div>
     </div>
 </body>
 </html>
