--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <div class="logout-container">
         <span id="user_role_label"></span>
         <a href="#" id="logout_link">Logout</a>
@@ -63,6 +64,7 @@
         <div>
             <button type="button" id="add_new_btn">+ Add New Employee</button>
         </div>
+    </div>
     </div>
 </body>
 </html>
