Fix Employee Category Update

--- a/frontend/create_user.html
+++ b/frontend/create_user.html
@@ -48,10 +48,10 @@
             <label for="category">Employee Category</label>
             <select id="category" name="category" required>
                 <option value="">-- Select a category --</option>
-                <option value="Full Time">Full Time</option>
-                <option value="Part Time">Part Time</option>
-                <option value="Contractor">Contractor</option>
-                <option value="Intern">Intern</option>
+                <option value="full">Full Time</option>
+                <option value="part">Part Time</option>
+                <option value="intern">Intern</option>
+                <option value="contractor">Contractor</option>
             </select>
         </div>
 
