--- a/frontend/employee_edit.html
+++ b/frontend/employee_edit.html
@@ -42,8 +42,8 @@
         <div>
             <label for="category">Employee Category</label>
             <select id="category" name="category">
-                <option value="full time">Full Time</option>
-                <option value="part time">Part Time</option>
+                <option value="full">Full Time</option>
+                <option value="part">Part Time</option>
                 <option value="intern">Intern</option>
                 <option value="contractor">Contractor</option>
             </select>
